src/objects/Charm_Sync__e.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>The Account Id used to sync</description>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charm_Url__c</fullName>
        <label>Charm Url</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <description>The Lead Id used for the sync</description>
        <label>Lead Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Charm_Sync</label>
    <pluralLabel>Charm_Sync</pluralLabel>
</CustomObject>